# conversational-booking-ai-agent

./: .env.example  .gitignore  pyproject.toml  streamlit_app.py
backend/: main.py
backend/agents/: langgraph_calendar_agent.py
backend/models/: schemas.py
backend/services/: calendar_service.py  demo_calendar_service.py
backend/utils/: session_manager.py
config/: settings.py
frontend/: app.py
frontend/components/: chat_interface.py
frontend/utils/: api_client.py
